--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
@@ -12,8 +12,8 @@
         <a href="./index.html"> WebStudio </a>
 
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
@@ -25,6 +25,7 @@
         </ul>
       </address>
     </header>
+
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
@@ -106,6 +107,7 @@
         </ul>
       </section>
     </main>
+
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
