--- a/index.html
+++ b/index.html
@@ -5,60 +5,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"> WebStudio </a>
+    <header class="header">
+      <nav class="header-nav">
+        <a href="./index.html" class="site-logo link">
+          Web<span class="site-logo-studio">Studio</span>
+        </a>
 
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="list">
+          <li>
+            <a href="./index.html" class="header-nav-item link-text link"
+              >Studio</a
+            >
+          </li>
+          <li>
+            <a href="./portfolio.html" class="header-nav-item link-text link"
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a href="" class="header-nav-item link-text link">Contacts</a>
+          </li>
         </ul>
       </nav>
 
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list">
+          <li>
+            <a
+              href="mailto:info@devstudio.com"
+              class="header-address-item link-text link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a
+              href="tel:+110001111111"
+              class="header-address-item link-text link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="order">
+        <h1 class="order-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="order-btn btn-text">Order Service</button>
       </section>
 
-      <section>
-        <h2>content</h2>
-        <ul>
+      <section class="content">
+        <h2 class="content-title">content</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="title-3">Strategy</h3>
+            <p class="medium-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="title-3">Punctuality</h3>
+            <p class="medium-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="title-3">Diligence</h3>
+            <p class="medium-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="title-3">Technologies</h3>
+            <p class="medium-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -66,9 +97,9 @@
         </ul>
       </section>
 
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
+      <section class="do">
+        <h2 class="title-2">What are we doing</h2>
+        <ul class="list">
           <li><img src="./images/img1.jpg" alt="monitor" width="360" /></li>
           <li><img src="./images/img2.jpg" alt="smartphone" width="360" /></li>
           <li>
@@ -81,36 +112,38 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="team">
+        <h2 class="title-2">Our Team</h2>
+        <ul class="list">
           <li>
             <img src="./images/team-card1.jpg" alt="mark" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title-3">Mark Guerrero</h3>
+            <p class="medium-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/team-card2.jpg" alt="tom" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title-3">Tom Ford</h3>
+            <p class="medium-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/team-card3.jpg" alt="camila" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title-3">Camila Garcia</h3>
+            <p class="medium-text">Marketing</p>
           </li>
           <li>
             <img src="./images/team-card4.jpg" alt="daniel" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title-3">Daniel Wilson</h3>
+            <p class="medium-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="site-logo link"
+        >Web<span class="site-logo-studio">Studio</span></a
+      >
+      <p class="footer-text medium-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
