--- a/portfolio.html
+++ b/portfolio.html
@@ -5,102 +5,177 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"> WebStudio </a>
+    <header class="header">
+      <nav class="header-nav">
+        <a href="./index.html" class="site-logo link">
+          Web<span class="site-logo-studio">Studio</span>
+        </a>
 
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="list">
+          <li>
+            <a href="./index.html" class="header-nav-item link-text link"
+              >Studio</a
+            >
+          </li>
+          <li>
+            <a href="./portfolio.html" class="header-nav-item link-text link"
+              >Portfolio</a
+            >
+          </li>
+          <li>
+            <a href="" class="header-nav-item link-text link">Contacts</a>
+          </li>
         </ul>
       </nav>
 
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list">
+          <li>
+            <a
+              href="mailto:info@devstudio.com"
+              class="header-address-item link-text link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a
+              href="tel:+110001111111"
+              class="header-address-item link-text link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
+      <section class="gallery">
         <h2>Gallery</h2>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+        <ul class="gallery-nav list">
+          <li>
+            <button type="button" class="gallery-nav-all btn-text">All</button>
+          </li>
+          <li>
+            <button type="button" class="gallery-nav-item btn-text">
+              Web Site
+            </button>
+          </li>
+          <li>
+            <button type="button" class="gallery-nav-item btn-text">App</button>
+          </li>
+          <li>
+            <button type="button" class="gallery-nav-item btn-text">
+              Design
+            </button>
+          </li>
+          <li>
+            <button type="button" class="gallery-nav-item btn-text">
+              Marketing
+            </button>
+          </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
-            <ul>
-              <li>
-                <img src="./images/project-card-1-1.jpg" alt="project-1" />
-                <h3>Banking App Interface Concept</h3>
-                <p>App</p>
-              </li>
-              <li>
-                <img src="./images/project-card-1-2.jpg" alt="project-2" />
-                <h3>Cashless Payment</h3>
-                <p>Marketing</p>
-              </li>
-              <li>
-                <img src="./images/project-card-1-3.jpg" alt="project-3" />
-                <h3>Meditation App</h3>
-                <p>App</p>
-              </li>
-            </ul>
+            <img
+              src="./images/project-card-1-1.jpg"
+              alt="project-1"
+              width="360"
+            />
+            <h3 class="title-3">Banking App Interface Concept</h3>
+            <p class="medium-text">App</p>
           </li>
           <li>
-            <ul>
-              <li>
-                <img src="./images/project-card-2-1.jpg" alt="project-4" />
-                <h3>Taxi Service</h3>
-                <p>Marketing</p>
-              </li>
-              <li>
-                <img src="./images/project-card-2-2.jpg" alt="project-5" />
-                <h3>Screen Illustrations</h3>
-                <p>Design</p>
-              </li>
-              <li>
-                <img src="./images/project-card-2-3.jpg" alt="project-6" />
-                <h3>Online Courses</h3>
-                <p>Marketing</p>
-              </li>
-            </ul>
+            <img
+              src="./images/project-card-1-2.jpg"
+              alt="project-2"
+              width="360"
+            />
+            <h3 class="title-3">Cashless Payment</h3>
+            <p class="medium-text">Marketing</p>
           </li>
           <li>
-            <ul>
-              <li>
-                <img src="./images/project-card-3-1.jpg" alt="project-7" />
-                <h3>Instagram Stories Concept</h3>
-                <p>Design</p>
-              </li>
-              <li>
-                <img src="./images/project-card-3-2.jpg" alt="project-8" />
-                <h3>Organic Food</h3>
-                <p>Web Site</p>
-              </li>
-              <li>
-                <img src="./images/project-card-3-3.jpg" alt="project-9" />
-                <h3>Fresh Coffee</h3>
-                <p>Web Site</p>
-              </li>
-            </ul>
+            <img
+              src="./images/project-card-1-3.jpg"
+              alt="project-3"
+              width="360"
+            />
+            <h3 class="title-3">Meditation App</h3>
+            <p class="medium-text">App</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/project-card-2-1.jpg"
+              alt="project-4"
+              width="360"
+            />
+            <h3 class="title-3">Taxi Service</h3>
+            <p class="medium-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/project-card-2-2.jpg"
+              alt="project-5"
+              width="360"
+            />
+            <h3 class="title-3">Screen Illustrations</h3>
+            <p class="medium-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/project-card-2-3.jpg"
+              alt="project-6"
+              width="360"
+            />
+            <h3 class="title-3">Online Courses</h3>
+            <p class="medium-text">Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/project-card-3-1.jpg"
+              alt="project-7"
+              width="360"
+            />
+            <h3 class="title-3">Instagram Stories Concept</h3>
+            <p class="medium-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/project-card-3-2.jpg"
+              alt="project-8"
+              width="360"
+            />
+            <h3 class="title-3">Organic Food</h3>
+            <p class="medium-text">Web Site</p>
+          </li>
+          <li>
+            <img
+              src="./images/project-card-3-3.jpg"
+              alt="project-9"
+              width="360"
+            />
+            <h3 class="title-3">Fresh Coffee</h3>
+            <p class="medium-text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="site-logo link"
+        >Web<span class="site-logo-studio">Studio</span></a
+      >
+      <p class="footer-text medium-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
