--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="header-nav">
         <a href="./index.html" class="site-logo link">
-          Web<span class="site-logo-studio">Studio</span>
+          Web<span class="header-logo">Studio</span>
         </a>
 
         <ul class="list">
@@ -37,7 +37,7 @@
         </ul>
       </nav>
 
-      <address>
+      <address class="header-address">
         <ul class="list">
           <li>
             <a
@@ -64,7 +64,7 @@
       </section>
 
       <section class="content">
-        <h2 class="content-title">content</h2>
+        <h2 hidden>content</h2>
         <ul class="list">
           <li>
             <h3 class="title-3">Strategy</h3>
@@ -115,22 +115,22 @@
       <section class="team">
         <h2 class="title-2">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="team-list-item">
             <img src="./images/team-card1.jpg" alt="mark" width="264" />
             <h3 class="title-3">Mark Guerrero</h3>
             <p class="medium-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img src="./images/team-card2.jpg" alt="tom" width="264" />
             <h3 class="title-3">Tom Ford</h3>
             <p class="medium-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img src="./images/team-card3.jpg" alt="camila" width="264" />
             <h3 class="title-3">Camila Garcia</h3>
             <p class="medium-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-item">
             <img src="./images/team-card4.jpg" alt="daniel" width="264" />
             <h3 class="title-3">Daniel Wilson</h3>
             <p class="medium-text">UI Designer</p>
@@ -141,7 +141,7 @@
 
     <footer class="footer">
       <a href="./index.html" class="site-logo link"
-        >Web<span class="site-logo-studio">Studio</span></a
+        >Web<span class="footer-logo">Studio</span></a
       >
       <p class="footer-text medium-text">
         Increase the flow of customers and sales for your business with digital
