--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="header-nav">
         <a href="./index.html" class="site-logo link">
-          Web<span class="site-logo-studio">Studio</span>
+          Web<span class="header-logo">Studio</span>
         </a>
 
         <ul class="list">
@@ -37,7 +37,7 @@
         </ul>
       </nav>
 
-      <address>
+      <address class="header-address">
         <ul class="list">
           <li>
             <a
@@ -59,7 +59,7 @@
 
     <main>
       <section class="gallery">
-        <h2>Gallery</h2>
+        <h1>Gallery</h1>
         <ul class="gallery-nav list">
           <li>
             <button type="button" class="gallery-nav-all btn-text">All</button>
@@ -83,89 +83,106 @@
             </button>
           </li>
         </ul>
+
         <ul class="list">
           <li>
-            <img
-              src="./images/project-card-1-1.jpg"
-              alt="project-1"
-              width="360"
-            />
-            <h3 class="title-3">Banking App Interface Concept</h3>
-            <p class="medium-text">App</p>
+            <a href="" class="link">
+              <img
+                src="./images/project-card-1-1.jpg"
+                alt="project-1"
+                width="360"
+              />
+              <h2 class="title-3">Banking App Interface Concept</h2>
+              <p class="medium-text">App</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/project-card-1-2.jpg"
-              alt="project-2"
-              width="360"
-            />
-            <h3 class="title-3">Cashless Payment</h3>
-            <p class="medium-text">Marketing</p>
+            <a href="" class="link">
+              <img
+                src="./images/project-card-1-2.jpg"
+                alt="project-2"
+                width="360"
+              />
+              <h2 class="title-3">Cashless Payment</h2>
+              <p class="medium-text">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/project-card-1-3.jpg"
-              alt="project-3"
-              width="360"
-            />
-            <h3 class="title-3">Meditation App</h3>
-            <p class="medium-text">App</p>
-          </li>
-
-          <li>
-            <img
-              src="./images/project-card-2-1.jpg"
-              alt="project-4"
-              width="360"
-            />
-            <h3 class="title-3">Taxi Service</h3>
-            <p class="medium-text">Marketing</p>
+            <a href="" class="link">
+              <img
+                src="./images/project-card-1-3.jpg"
+                alt="project-3"
+                width="360"
+              />
+              <h2 class="title-3">Meditation App</h2>
+              <p class="medium-text">App</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/project-card-2-2.jpg"
-              alt="project-5"
-              width="360"
-            />
-            <h3 class="title-3">Screen Illustrations</h3>
-            <p class="medium-text">Design</p>
+            <a href="" class="link">
+              <img
+                src="./images/project-card-2-1.jpg"
+                alt="project-4"
+                width="360"
+              />
+              <h2 class="title-3">Taxi Service</h2>
+              <p class="medium-text">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/project-card-2-3.jpg"
-              alt="project-6"
-              width="360"
-            />
-            <h3 class="title-3">Online Courses</h3>
-            <p class="medium-text">Marketing</p>
-          </li>
-
-          <li>
-            <img
-              src="./images/project-card-3-1.jpg"
-              alt="project-7"
-              width="360"
-            />
-            <h3 class="title-3">Instagram Stories Concept</h3>
-            <p class="medium-text">Design</p>
+            <a href="" class="link">
+              <img
+                src="./images/project-card-2-2.jpg"
+                alt="project-5"
+                width="360"
+              />
+              <h2 class="title-3">Screen Illustrations</h2>
+              <p class="medium-text">Design</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/project-card-3-2.jpg"
-              alt="project-8"
-              width="360"
-            />
-            <h3 class="title-3">Organic Food</h3>
-            <p class="medium-text">Web Site</p>
+            <a href="" class="link">
+              <img
+                src="./images/project-card-2-3.jpg"
+                alt="project-6"
+                width="360"
+              />
+              <h2 class="title-3">Online Courses</h2>
+              <p class="medium-text">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/project-card-3-3.jpg"
-              alt="project-9"
-              width="360"
-            />
-            <h3 class="title-3">Fresh Coffee</h3>
-            <p class="medium-text">Web Site</p>
+            <a href="" class="link">
+              <img
+                src="./images/project-card-3-1.jpg"
+                alt="project-7"
+                width="360"
+              />
+              <h2 class="title-3">Instagram Stories Concept</h2>
+              <p class="medium-text">Design</p>
+            </a>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/project-card-3-2.jpg"
+                alt="project-8"
+                width="360"
+              />
+              <h2 class="title-3">Organic Food</h2>
+              <p class="medium-text">Web Site</p></a
+            >
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/project-card-3-3.jpg"
+                alt="project-9"
+                width="360"
+              />
+              <h2 class="title-3">Fresh Coffee</h2>
+              <p class="medium-text">Web Site</p></a
+            >
           </li>
         </ul>
       </section>
@@ -173,7 +190,7 @@
 
     <footer class="footer">
       <a href="./index.html" class="site-logo link"
-        >Web<span class="site-logo-studio">Studio</span></a
+        >Web<span class="footer-logo">Studio</span></a
       >
       <p class="footer-text medium-text">
         Increase the flow of customers and sales for your business with digital
