--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
 
     <main>
       <section class="gallery">
-        <h1>Gallery</h1>
+        <h1 hidden>Gallery</h1>
         <ul class="gallery-nav list">
           <li>
             <button type="button" class="gallery-nav-all btn-text">All</button>
