--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
       </section>
 
       <section class="content">
-        <h2 hidden>content</h2>
+        <h2 hidden class="content-title">content</h2>
         <ul class="list">
           <li>
-            <h3 class="title-3">Strategy</h3>
+            <h3 class="content-title title-3">Strategy</h3>
             <p class="medium-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
