--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <h1 hidden>Gallery</h1>
         <ul class="gallery-nav list">
           <li>
-            <button type="button" class="gallery-nav-all btn-text">All</button>
+            <button type="button" class="gallery-nav-item btn-text">All</button>
           </li>
           <li>
             <button type="button" class="gallery-nav-item btn-text">
@@ -93,7 +93,7 @@
                 width="360"
               />
               <h2 class="title-3">Banking App Interface Concept</h2>
-              <p class="medium-text">App</p>
+              <p class="gallery-list-text medium-text">App</p>
             </a>
           </li>
           <li>
@@ -104,7 +104,7 @@
                 width="360"
               />
               <h2 class="title-3">Cashless Payment</h2>
-              <p class="medium-text">Marketing</p>
+              <p class="gallery-list-text medium-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -115,7 +115,7 @@
                 width="360"
               />
               <h2 class="title-3">Meditation App</h2>
-              <p class="medium-text">App</p>
+              <p class="gallery-list-text medium-text">App</p>
             </a>
           </li>
           <li>
@@ -126,7 +126,7 @@
                 width="360"
               />
               <h2 class="title-3">Taxi Service</h2>
-              <p class="medium-text">Marketing</p>
+              <p class="gallery-list-text medium-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -137,7 +137,7 @@
                 width="360"
               />
               <h2 class="title-3">Screen Illustrations</h2>
-              <p class="medium-text">Design</p>
+              <p class="gallery-list-text medium-text">Design</p>
             </a>
           </li>
           <li>
@@ -148,7 +148,7 @@
                 width="360"
               />
               <h2 class="title-3">Online Courses</h2>
-              <p class="medium-text">Marketing</p>
+              <p class="gallery-list-text medium-text">Marketing</p>
             </a>
           </li>
           <li>
@@ -159,7 +159,7 @@
                 width="360"
               />
               <h2 class="title-3">Instagram Stories Concept</h2>
-              <p class="medium-text">Design</p>
+              <p class="gallery-list-text medium-text">Design</p>
             </a>
           </li>
           <li>
@@ -170,7 +170,7 @@
                 width="360"
               />
               <h2 class="title-3">Organic Food</h2>
-              <p class="medium-text">Web Site</p></a
+              <p class="gallery-list-text medium-text">Web Site</p></a
             >
           </li>
           <li>
@@ -181,7 +181,7 @@
                 width="360"
               />
               <h2 class="title-3">Fresh Coffee</h2>
-              <p class="medium-text">Web Site</p></a
+              <p class="gallery-list-text medium-text">Web Site</p></a
             >
           </li>
         </ul>
