--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </section>
 
       <section class="do">
-        <h2 class="title-2">What are we doing</h2>
+        <h2 class="do-title title-2">What are we doing</h2>
         <ul class="list">
           <li><img src="./images/img1.jpg" alt="monitor" width="360" /></li>
           <li><img src="./images/img2.jpg" alt="smartphone" width="360" /></li>
@@ -113,7 +113,7 @@
       </section>
 
       <section class="team">
-        <h2 class="title-2">Our Team</h2>
+        <h2 class="team-title title-2">Our Team</h2>
         <ul class="list">
           <li class="team-list-item">
             <img src="./images/team-card1.jpg" alt="mark" width="264" />
