--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <h2 hidden class="content-title">content</h2>
         <ul class="list">
           <li>
-            <h3 class="content-title title-3">Strategy</h3>
+            <h3 class="title-3">Strategy</h3>
             <p class="medium-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -98,7 +98,7 @@
       </section>
 
       <section class="do">
-        <h2 class="do-title title-2">What are we doing</h2>
+        <h2 class="title-2">What are we doing</h2>
         <ul class="list">
           <li><img src="./images/img1.jpg" alt="monitor" width="360" /></li>
           <li><img src="./images/img2.jpg" alt="smartphone" width="360" /></li>
