--- a/index.html
+++ b/index.html
@@ -67,28 +67,28 @@
         <h2 hidden class="content-title">content</h2>
         <ul class="list">
           <li>
-            <h3 class="title-3">Strategy</h3>
+            <h3 class="title-down">Strategy</h3>
             <p class="medium-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="title-3">Punctuality</h3>
+            <h3 class="title-down">Punctuality</h3>
             <p class="medium-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="title-3">Diligence</h3>
+            <h3 class="title-down">Diligence</h3>
             <p class="medium-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="title-3">Technologies</h3>
+            <h3 class="title-down">Technologies</h3>
             <p class="medium-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -98,7 +98,7 @@
       </section>
 
       <section class="do">
-        <h2 class="title-2">What are we doing</h2>
+        <h2 class="title-up">What are we doing</h2>
         <ul class="list">
           <li><img src="./images/img1.jpg" alt="monitor" width="360" /></li>
           <li><img src="./images/img2.jpg" alt="smartphone" width="360" /></li>
@@ -113,7 +113,7 @@
       </section>
 
       <section class="team">
-        <h2 class="team-title title-2">Our Team</h2>
+        <h2 class="title-up">Our Team</h2>
         <ul class="list">
           <li class="team-list-item">
             <img src="./images/team-card1.jpg" alt="mark" width="264" />
