--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
                 alt="project-1"
                 width="360"
               />
-              <h2 class="title-3">Banking App Interface Concept</h2>
+              <h2 class="title-down">Banking App Interface Concept</h2>
               <p class="gallery-list-text medium-text">App</p>
             </a>
           </li>
@@ -103,7 +103,7 @@
                 alt="project-2"
                 width="360"
               />
-              <h2 class="title-3">Cashless Payment</h2>
+              <h2 class="title-down">Cashless Payment</h2>
               <p class="gallery-list-text medium-text">Marketing</p>
             </a>
           </li>
@@ -114,7 +114,7 @@
                 alt="project-3"
                 width="360"
               />
-              <h2 class="title-3">Meditation App</h2>
+              <h2 class="title-down">Meditation App</h2>
               <p class="gallery-list-text medium-text">App</p>
             </a>
           </li>
@@ -125,7 +125,7 @@
                 alt="project-4"
                 width="360"
               />
-              <h2 class="title-3">Taxi Service</h2>
+              <h2 class="title-down">Taxi Service</h2>
               <p class="gallery-list-text medium-text">Marketing</p>
             </a>
           </li>
@@ -136,7 +136,7 @@
                 alt="project-5"
                 width="360"
               />
-              <h2 class="title-3">Screen Illustrations</h2>
+              <h2 class="title-down">Screen Illustrations</h2>
               <p class="gallery-list-text medium-text">Design</p>
             </a>
           </li>
@@ -147,7 +147,7 @@
                 alt="project-6"
                 width="360"
               />
-              <h2 class="title-3">Online Courses</h2>
+              <h2 class="title-down">Online Courses</h2>
               <p class="gallery-list-text medium-text">Marketing</p>
             </a>
           </li>
@@ -158,7 +158,7 @@
                 alt="project-7"
                 width="360"
               />
-              <h2 class="title-3">Instagram Stories Concept</h2>
+              <h2 class="title-down">Instagram Stories Concept</h2>
               <p class="gallery-list-text medium-text">Design</p>
             </a>
           </li>
@@ -169,7 +169,7 @@
                 alt="project-8"
                 width="360"
               />
-              <h2 class="title-3">Organic Food</h2>
+              <h2 class="title-down">Organic Food</h2>
               <p class="gallery-list-text medium-text">Web Site</p></a
             >
           </li>
@@ -180,7 +180,7 @@
                 alt="project-9"
                 width="360"
               />
-              <h2 class="title-3">Fresh Coffee</h2>
+              <h2 class="title-down">Fresh Coffee</h2>
               <p class="gallery-list-text medium-text">Web Site</p></a
             >
           </li>
