--- a/index.html
+++ b/index.html
@@ -117,22 +117,22 @@
         <ul class="list">
           <li class="team-list-item">
             <img src="./images/team-card1.jpg" alt="mark" width="264" />
-            <h3 class="title-3">Mark Guerrero</h3>
+            <h3 class="title-down">Mark Guerrero</h3>
             <p class="medium-text">Product Designer</p>
           </li>
           <li class="team-list-item">
             <img src="./images/team-card2.jpg" alt="tom" width="264" />
-            <h3 class="title-3">Tom Ford</h3>
+            <h3 class="title-down">Tom Ford</h3>
             <p class="medium-text">Frontend Developer</p>
           </li>
           <li class="team-list-item">
             <img src="./images/team-card3.jpg" alt="camila" width="264" />
-            <h3 class="title-3">Camila Garcia</h3>
+            <h3 class="title-down">Camila Garcia</h3>
             <p class="medium-text">Marketing</p>
           </li>
           <li class="team-list-item">
             <img src="./images/team-card4.jpg" alt="daniel" width="264" />
-            <h3 class="title-3">Daniel Wilson</h3>
+            <h3 class="title-down">Daniel Wilson</h3>
             <p class="medium-text">UI Designer</p>
           </li>
         </ul>
